# proxy-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  blacklist.txt
.github/workflows/: release.yml
assets/: not_found.html  proxy-nginx.config
assets/pac/: proxy.pac
assets/scripts/: linux_setup.sh  windows_ps.ps1  windows_setup.bat  windows_setup.ps1
assets/static/: index.html
assets/web/: index.html
src/: main.rs  read_txt.rs  serve.rs
src/handlers/: connections.rs  mod.rs  payments.rs  users.rs
